page accueil et commence servive

--- a/public/css/services.css
+++ b/public/css/services.css
@@ -75,10 +75,11 @@ nav {
     border-radius: 3px;
 }
 
+
 /* ***********************************Header *********************************/
 
 header {
-    height: 100vh;
+    height: 50vh;
     position: relative;
     width: 100vw;
     overflow: hidden;
@@ -87,7 +88,7 @@ header {
 
 .image-principale {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     position: relative;
     margin-left: 350px;
 }
@@ -98,7 +99,9 @@ header {
     height: 100%;
     z-index: 1;
     object-fit: cover;
+    object-position: center;
 }
+
 
 .image-principale .entete {
     position: absolute;
@@ -138,8 +141,9 @@ header {
     width: 100%;
     height: 100%;
     z-index: 2;
-    background-color: rgba(0, 0, 0, 0.137);
+    background-color: rgba(0, 0, 0, 0.233);
 }
+
 
 
 /* **************************************main******************** */
@@ -210,53 +214,17 @@ p {
 
 
 
-/* *********************************************** */
-
-.contenue-realisations {
-    margin-left: 350px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.contenue-realisations img {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 408px;
-    border-radius: 5px;
-
-    height: 272px;
-    object-fit: cover;
 
 
 
-}
 
-.realisations {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 43%;
-}
 
-.realisations button {
-    background-color: white;
-    color: black;
-    width: 192px;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 50px;
-    transition: ease-in-out 0.2s;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
 
-}
 
-.realisations button:hover {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-}
+
+
+
+
 
 /* *****************************************footer *******************/
 
