Projet renovation maison

--- a/public/css/realisations.css
+++ b/public/css/realisations.css
@@ -4,6 +4,10 @@ body {
     overflow-x: hidden;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* *********************************nav **********************************/
 
 nav {
@@ -48,7 +52,7 @@ nav {
 }
 
 .nav a.active {
-    color: rgb(0, 0, 0);
+    color: black;
     font-weight: bold;
 }
 
@@ -61,8 +65,6 @@ nav {
     justify-content: center;
 }
 
-
-
 .images img {
     margin-right: 3px;
     margin-left: 3px;
@@ -72,24 +74,26 @@ nav {
 
 .bottom-line {
     width: 200px;
-    border: 3px solid rgb(0, 0, 0);
+    border: 3px solid black;
     margin-bottom: 10px;
     border-radius: 3px;
 }
 
+
 /* ***********************************Header *********************************/
 
 header {
-    height: 100vh;
+    height: 50vh;
     position: relative;
     width: 100vw;
     overflow: hidden;
 
 }
 
+
 .image-principale {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     position: relative;
     margin-left: 350px;
 }
@@ -100,11 +104,13 @@ header {
     height: 100%;
     z-index: 1;
     object-fit: cover;
+    object-position: center;
 }
+
 
 .image-principale .entete {
     position: absolute;
-    width: 100%;
+    width: 60%;
     z-index: 3;
     bottom: 50px;
     left: 100px;
@@ -116,23 +122,11 @@ header {
         font-family: 'Bebas Neue', sans-serif;
     }
 
-    button {
-        background-color: white;
-        color: black;
-        width: 400px;
-        text-transform: uppercase;
-        text-decoration: none;
-        border: none;
-        border-radius: 5px;
-        height: 50px;
-        transition: ease-in-out 0.2s;
+    h5 {
+        color: rgb(255, 255, 255);
+
     }
 
-    button:hover {
-        background-color: rgb(0, 0, 0);
-        color: rgb(255, 255, 255);
-        border: 1px solid white;
-    }
 }
 
 .overlay {
@@ -140,63 +134,14 @@ header {
     width: 100%;
     height: 100%;
     z-index: 2;
-    background-color: rgba(0, 0, 0, 0.137);
+    background-color: rgba(0, 0, 0, 0.233);
 }
+
 
 
 /* **************************************main******************** */
-
-
-main {
-    width: 100vw;
-}
-
-.contenue-pn {
-    margin-left: 350px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.contenue-pn img {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 408px;
-    border-radius: 5px;
-
-
-}
-
-.pq-nous {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 43%;
-}
-
-.pq-nous button {
-    background-color: white;
-    color: black;
-    width: 375px;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 50px;
-    transition: ease-in-out 0.2s;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-a {
-    text-decoration: none;
-}
-
-.pq-nous button:hover {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-}
-
 .grey-line {
+    margin-left: 5%;
     width: 290px;
     border: 3px solid #EFEFEF;
 }
@@ -204,12 +149,106 @@ a {
 h2 {
     font-size: 60px;
     font-weight: bold;
+    margin-bottom: 10px;
+
 }
 
-p {
+h2.h2 {
+    margin-left: 5%;
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 0px;
+}
+
+h4.gray {
+    color: rgb(182, 182, 182);
+    margin-left: 5%;
+    margin-bottom: 100px;
+}
+
+.conteneur-total {
+    margin-left: 350px;
+    margin-top: 40px;
+
+}
+
+.conteneur-image2 {
+    display: grid;
+    grid-auto-rows: 278px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    align-items: center;
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+}
+
+.conteneur-image3 {
+    display: grid;
+    grid-auto-rows: 278px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+}
+
+.contain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
+    height: 100%;
+    position: relative;
 }
 
+.contain img {
+    margin-bottom: 10px;
+    width: 100%;
+    height: 100%;
+    min-width: 260px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 5px;
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.479);
+}
+
+a.icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 10;
+}
+
+span {
+    color: white;
+    /* background-color: black; */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/************ scroll******** */
 #progress {
     color: #292929;
     position: fixed;
@@ -236,58 +275,6 @@ p {
     place-items: center;
     font-size: 35px;
     color: black;
-}
-
-
-
-
-
-/* *********************************************** */
-
-.contenue-realisations {
-    margin-left: 350px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.contenue-realisations img {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 408px;
-    border-radius: 5px;
-
-    height: 272px;
-    object-fit: cover;
-
-
-
-}
-
-.realisations {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 43%;
-}
-
-.realisations button {
-    background-color: white;
-    color: black;
-    width: 192px;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 50px;
-    transition: ease-in-out 0.2s;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-}
-
-.realisations button:hover {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
 }
 
 /* *****************************************footer *******************/
