--- a/public/css/a-propos.css
+++ b/public/css/a-propos.css
@@ -80,7 +80,7 @@ nav {
 /* ***********************************Header *********************************/
 
 header {
-    height: 100vh;
+    height: 50vh;
     position: relative;
     width: 100vw;
     overflow: hidden;
@@ -89,7 +89,7 @@ header {
 
 .image-principale {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     position: relative;
     margin-left: 350px;
 }
@@ -100,7 +100,9 @@ header {
     height: 100%;
     z-index: 1;
     object-fit: cover;
+    object-position: center;
 }
+
 
 .image-principale .entete {
     position: absolute;
@@ -140,7 +142,7 @@ header {
     width: 100%;
     height: 100%;
     z-index: 2;
-    background-color: rgba(0, 0, 0, 0.137);
+    background-color: rgba(0, 0, 0, 0.233);
 }
 
 
@@ -151,13 +153,13 @@ main {
     width: 100vw;
 }
 
-.contenue-pn {
+.contenue-offre {
     margin-left: 350px;
     display: flex;
     justify-content: space-around;
 }
 
-.contenue-pn img {
+.contenue-offre img {
     margin-top: 50px;
     margin-bottom: 50px;
     width: 408px;
@@ -166,13 +168,13 @@ main {
 
 }
 
-.pq-nous {
+.offre {
     margin-top: 50px;
     margin-bottom: 50px;
     width: 43%;
 }
 
-.pq-nous button {
+.offre button {
     background-color: white;
     color: black;
     width: 375px;
@@ -191,7 +193,7 @@ a {
     text-decoration: none;
 }
 
-.pq-nous button:hover {
+.offre button:hover {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
 }
@@ -204,11 +206,27 @@ a {
 h2 {
     font-size: 60px;
     font-weight: bold;
+    margin-bottom: 0px;
+}
+
+h2.h2 {
+    margin-left: 7%;
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 0px;
 }
 
 p {
     width: 100%;
 }
+
+.conteneur-total {
+    margin-left: 350px;
+
+}
+
+
+
 
 #progress {
     color: #292929;
@@ -239,56 +257,40 @@ p {
 }
 
 
-
-
-
-/* *********************************************** */
-
-.contenue-realisations {
-    margin-left: 350px;
+.button-fixed {
     display: flex;
-    justify-content: space-around;
-}
-
-.contenue-realisations img {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 408px;
-    border-radius: 5px;
-
-    height: 272px;
-    object-fit: cover;
-
-
-
-}
-
-.realisations {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 43%;
-}
-
-.realisations button {
-    background-color: white;
-    color: black;
-    width: 192px;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 50px;
-    transition: ease-in-out 0.2s;
-    display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: fixed;
+    width: 300px;
+    background-color: black;
+    height: 50px;
+    bottom: 268px;
+    right: -126px;
+    transform: rotate(270deg);
+    border-radius: 5px 5px 0px 0px;
+    transition: 0.2s ease-in-out;
+}
+
+.button-fixed:hover {
+    background-color: rgb(87, 11, 11);
+    ;
+}
+
+.button-fixed p {
+    margin: 0;
+    color: white;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: bold;
 
 }
 
-.realisations button:hover {
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-}
+
+
+
+
 
 /* *****************************************footer *******************/
 
