--- a/public/css/services.css
+++ b/public/css/services.css
@@ -4,6 +4,10 @@ body {
     overflow-x: hidden;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* *********************************nav **********************************/
 
 nav {
@@ -153,13 +157,13 @@ main {
     width: 100vw;
 }
 
-.contenue-pn {
+.contenue-offre {
     margin-left: 350px;
     display: flex;
     justify-content: space-around;
 }
 
-.contenue-pn img {
+.contenue-offre img {
     margin-top: 50px;
     margin-bottom: 50px;
     width: 408px;
@@ -168,13 +172,13 @@ main {
 
 }
 
-.pq-nous {
+.offre {
     margin-top: 50px;
     margin-bottom: 50px;
     width: 43%;
 }
 
-.pq-nous button {
+.offre button {
     background-color: white;
     color: black;
     width: 375px;
@@ -193,7 +197,7 @@ a {
     text-decoration: none;
 }
 
-.pq-nous button:hover {
+.offre button:hover {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
 }
@@ -206,15 +210,84 @@ a {
 h2 {
     font-size: 60px;
     font-weight: bold;
+    margin-bottom: 0px;
+}
+
+h2.h2 {
+    margin-left: 7%;
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 0px;
 }
 
 p {
     width: 100%;
 }
 
+.conteneur-total {
+    margin-left: 350px;
+
+}
 
 
+.conteneur-image2 {
+    display: grid;
+    grid-auto-rows: 300px;
+    grid-row-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
 
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+}
+
+.contain {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.contain img {
+    margin-bottom: 10px;
+    width: 80%;
+    height: 200px;
+    min-width: 260px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 5px;
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.479);
+}
+
+#progress {
+    position: fixed;
+    z-index: 100;
+    bottom: 20px;
+    right: 10px;
+    height: 70px;
+    width: 70px;
+    display: none;
+    place-items: center;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+
+#progress-value {
+    display: block;
+    height: calc(100% - 15px);
+    width: calc(100% - 15px);
+    background-color: white;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    font-size: 35px;
+    color: black;
+}
 
 
 
